objects/Survey__c.object
<CustomObject>
    <description>Custom survey object built to expand functionality beyond the native Salesforce Survey model.</description>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An active survey is a survey record that is currently in use.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Brief description of Survey__c record.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy Survey Id for the corresponding historical Survey record.</description>
        <externalId>true</externalId>
        <label>Legacy Survey Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Version_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy Id for the corresponding, historical Salesforce Survey Version record.</description>
        <externalId>true</externalId>
        <label>Legacy Survey Version Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>